--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<p>Nuestra gran experiencia nos permite ofrecerle la más alta calidad en:<br />
 				Acabados del hogar, pintura y arreglos menores.</p>
                 <h2>Contáctanos</h2>
-                <img src="C:\Users\sebas\spark01\images\QR.png">
+                <img src="http://www.guiasnintendo.com/0a_NINTENDO_3DS/yo-kai-watch-blasters/guia-yo-kai-watch-blasters/imagenes/ilustraciones/QR/QR-monedas-fuerza/qr-moneda-fuerza-01.png">
                 
 			</header>
                
